# 2026-cloud-computing-days

./: .gitignore  .mcp.json  LICENSE  Makefile  Manual.md  README.md  Task-1.md  Task-2.md  Task-3.md  Task-4.md  Task-5.md  Tasks.md  docker-compose.dev.yml
OneDrive/Desktop/projects/proj_AgentBox/: .env.example  .gitignore  .sops.yaml  README.md  Task-1.md  Task-2.md  Task-3.md  Task-4.md  Task-5.md  Task-6.md  Task-7.md  Tasks.md  explanation.md  pyproject.toml  requirements-dev.txt  requirements.txt  rough-plan.md
OneDrive/Desktop/projects/proj_AgentBox/.claude/: CLAUDE.md  settings.local.json
OneDrive/Desktop/projects/proj_AgentBox/dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
OneDrive/Desktop/projects/proj_AgentBox/docs/: manual-e2e.md
OneDrive/Desktop/projects/proj_AgentBox/infra/: bedrock.tf  bedrock_system_prompt.txt  bedrock_tools_addendum.txt  cloudwatch.tf  code_dist.tf  dynamodb.tf  ec2.tf  kms.tf  lambda.tf  main.tf  s3.tf  userdata-app.sh.tpl  userdata-mcp.sh.tpl  userdata.sh.tpl  variables.tf
OneDrive/Desktop/projects/proj_AgentBox/lambda/: mcp_bridge.py  metrics_publisher.py
OneDrive/Desktop/projects/proj_AgentBox/proto/: inspect.proto
OneDrive/Desktop/projects/proj_AgentBox/scripts/: activate.sh  check_ec2.sh  deactivate.sh  deploy.sh  deploy_certs_to_ec2.sh  deploy_static.sh  destroy.sh  encrypt_and_upload.sh  gen_mtls_certs.sh  gen_proto.sh  install_ca.sh  install_ebpf.sh  iptables_redirect.sh  redeploy_idempotency.sh  run.sh  setup_vm.sh  test_lifecycle_45.sh  test_transparent.sh  (+2 more)
(+638 files in other folders)
