[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbox"
version = "0.1.0"
description = "Local sandbox MITM proxy with HITL control for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.2,<11",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.20",
    "cryptography>=42",
    "loguru>=0.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "grpcio>=1.60,<1.80",
    "protobuf>=5.26.1,<6",
    "requests>=2.31",
]

[project.scripts]
agentbox = "agentbox.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "terraform: requires terraform CLI in PATH",
    "aws: requires real AWS credentials",
]
